# ngapp_template

./: cookiecutter.json
{{ cookiecutter.module_name }}/: pyproject.toml
{{ cookiecutter.module_name }}/src/{{ cookiecutter.module_name }}/: __main__.py  app.py  appconfig.py
{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml
{{cookiecutter.project_slug}}/{{ cookiecutter.module_name }}/src/{{ cookiecutter.module_name }}/: __init__.py
{{cookiecutter.python_module}}/: README.md  pyproject.toml
{{cookiecutter.python_module}}/.github/workflows/: deploy.yml
{{cookiecutter.python_module}}/src/{{ cookiecutter.python_module }}/: app.py  appconfig.py
{{cookiecutter.python_module}}/{{ cookiecutter.python_module }}/src/{{ cookiecutter.python_module }}/: __init__.py  __main__.py
