[build-system]
requires = [ "setuptools>=60", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.python_module }}"
dynamic = ["version"]
dependencies = ["platformdirs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.python_module }}.__version__"}
